[gd_scene load_steps=9 format=2]

[ext_resource path="res://actors/god_hand/tutoring.gd" type="Script" id=1]
[ext_resource path="res://actors/god_hand/animations/tutoring_00.tres" type="Animation" id=2]
[ext_resource path="res://actors/god_hand/animations/tutoring_01.tres" type="Animation" id=3]
[ext_resource path="res://actors/god_hand/god_hand.tscn" type="PackedScene" id=4]
[ext_resource path="res://interface/theme.tres" type="Theme" id=5]
[ext_resource path="res://font/GaroaHackerClubeBold.otf" type="DynamicFontData" id=6]

[sub_resource type="Animation" id=2]

resource_name = "SETUP"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/arm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 72, 136 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/arm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/arm:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/arm/hand:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/arm/hand:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("pivot/arm/hand:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("pivot/arm/hand/palm/pinky:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 52.6645, -29.976 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("pivot/arm/hand/palm/pinky:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 12.0088 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("pivot/arm/hand/palm/pinky:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("pivot/arm/hand/palm/ring:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 22, -47 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("pivot/arm/hand/palm/ring:rotation_degrees")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 8.60102 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("pivot/arm/hand/palm/ring:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("pivot/arm/hand/palm/thumb:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -29.5, 40 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("pivot/arm/hand/palm/thumb:rotation_degrees")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 7.06841 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("pivot/arm/hand/palm/thumb:scale")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("pivot/arm/sprite:position")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 328.5 ) ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("pivot/arm/sprite:rotation_degrees")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("pivot/arm/sprite:scale")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("pivot/arm/hand/palm:position")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 0 ) ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("pivot/arm/hand/palm:rotation_degrees")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/20/type = "value"
tracks/20/path = NodePath("pivot/arm/hand/palm:scale")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/21/type = "value"
tracks/21/path = NodePath("pivot/arm/hand/palm/index:position")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -40, -48 ) ]
}
tracks/22/type = "value"
tracks/22/path = NodePath("pivot/arm/hand/palm/index:rotation_degrees")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -20.6055 ]
}
tracks/23/type = "value"
tracks/23/path = NodePath("pivot/arm/hand/palm/index:scale")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/24/type = "value"
tracks/24/path = NodePath("pivot/arm/hand/palm/middle:position")
tracks/24/interp = 1
tracks/24/loop_wrap = true
tracks/24/imported = false
tracks/24/enabled = true
tracks/24/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -8, -56 ) ]
}
tracks/25/type = "value"
tracks/25/path = NodePath("pivot/arm/hand/palm/middle:rotation_degrees")
tracks/25/interp = 1
tracks/25/loop_wrap = true
tracks/25/imported = false
tracks/25/enabled = true
tracks/25/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -2.98286 ]
}
tracks/26/type = "value"
tracks/26/path = NodePath("pivot/arm/hand/palm/middle:scale")
tracks/26/interp = 1
tracks/26/loop_wrap = true
tracks/26/imported = false
tracks/26/enabled = true
tracks/26/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/27/type = "value"
tracks/27/path = NodePath("pivot/arm/hand/palm/thumb:visible")
tracks/27/interp = 1
tracks/27/loop_wrap = true
tracks/27/imported = false
tracks/27/enabled = true
tracks/27/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/28/type = "value"
tracks/28/path = NodePath("pivot/arm/hand/palm/pinky:visible")
tracks/28/interp = 1
tracks/28/loop_wrap = true
tracks/28/imported = false
tracks/28/enabled = true
tracks/28/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/29/type = "value"
tracks/29/path = NodePath("pivot/arm/hand/palm/ring:visible")
tracks/29/interp = 1
tracks/29/loop_wrap = true
tracks/29/imported = false
tracks/29/enabled = true
tracks/29/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/30/type = "value"
tracks/30/path = NodePath("pivot/arm/hand/palm/middle:visible")
tracks/30/interp = 1
tracks/30/loop_wrap = true
tracks/30/imported = false
tracks/30/enabled = true
tracks/30/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/31/type = "value"
tracks/31/path = NodePath("pivot/arm/hand/palm/index:visible")
tracks/31/interp = 1
tracks/31/loop_wrap = true
tracks/31/imported = false
tracks/31/enabled = true
tracks/31/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="DynamicFont" id=1]

size = 14
use_mipmaps = false
use_filter = false
extra_spacing_top = 5
font_data = ExtResource( 6 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[node name="tutoring" type="Node2D"]

z_index = 2
script = ExtResource( 1 )
_sections_unfolded = [ "Z Index" ]
bug_path = null

[node name="animator" type="AnimationPlayer" parent="." index="0"]

root_node = NodePath("..")
autoplay = "test_00"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/SETUP = SubResource( 2 )
anims/tutoring_00 = ExtResource( 2 )
anims/tutoring_01 = ExtResource( 3 )
blend_times = [  ]

[node name="pivot" parent="." index="1" instance=ExtResource( 4 )]

editor/display_folded = true

[node name="hand" parent="pivot/arm" index="2"]

editor/display_folded = true

[node name="index" parent="pivot/arm/hand/palm" index="0"]

_sections_unfolded = [ "Region", "Visibility" ]

[node name="middle" parent="pivot/arm/hand/palm" index="1"]

_sections_unfolded = [ "Region", "Visibility" ]

[node name="ring" parent="pivot/arm/hand/palm" index="2"]

_sections_unfolded = [ "Region", "Visibility" ]

[node name="pinky" parent="pivot/arm/hand/palm" index="3"]

_sections_unfolded = [ "Region", "Visibility" ]

[node name="thumb" parent="pivot/arm/hand/palm" index="4"]

_sections_unfolded = [ "Region", "Visibility" ]

[node name="dialog_box" type="Panel" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 280.0
margin_top = 48.0
margin_right = 704.0
margin_bottom = 136.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 5 )
_sections_unfolded = [ "Theme" ]

[node name="dialog" type="Label" parent="dialog_box" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 8.0
margin_right = 416.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempor condimentum rutrum. 
"
align = 3
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="next" type="Button" parent="dialog_box" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 344.0
margin_top = 96.0
margin_right = 424.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "skip"
flat = false
align = 1

[node name="tween" type="Tween" parent="." index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="animation_finished" from="animator" to="." method="_on_animation_finished"]

[connection signal="animation_started" from="animator" to="." method="_on_animation_started"]


[editable path="pivot"]
